<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>dk.statsbiblioteket.digital_pligtaflevering_aviser</groupId>
        <artifactId>dpa-root</artifactId>
        <version>master-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <groupId>dk.statsbiblioteket.digital_pligtaflevering_aviser.tools</groupId>
    <artifactId>dpa-tools</artifactId>
    <version>master-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <appassembler-maven-plugin.mainClass1>
            dk.statsbiblioteket.digital_pligtaflevering_aviser.tools.VeraPdfMain
        </appassembler-maven-plugin.mainClass1>
        <appassembler-maven-plugin.id1>dpa-tool-verapdf</appassembler-maven-plugin.id1>
        <!-- we are currently using junit tests as IntelliJ launchers, so don't run tests automatically -->
        <skipTests>false</skipTests>
    </properties>

    <dependencies>
        <dependency>
            <groupId>dk.statsbiblioteket.digital_pligtaflevering_aviser</groupId>
            <artifactId>dpa-harness</artifactId>
            <version>master-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.google.dagger</groupId>
            <artifactId>dagger</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.dagger</groupId>
            <artifactId>dagger-compiler</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- FIXME: TEMPORARY HACK TO MAKE DOMSINGESTERMAIN WORK -->
        <dependency>
            <groupId>dk.statsbiblioteket.digital_pligtaflevering_aviser</groupId>
            <artifactId>dpa-doms</artifactId>
            <version>master-SNAPSHOT</version>
        </dependency>


        <dependency>
            <groupId>io.javaslang</groupId>
            <artifactId>javaslang</artifactId>
        </dependency>

        <dependency>
            <!-- use simple logging for IDE use but not for deployment -->
            <artifactId>slf4j-simple</artifactId>
            <groupId>org.slf4j</groupId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>dk.statsbiblioteket.newspaper</groupId>
            <artifactId>dpa-batch-trigger</artifactId>
            <version>1.9-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>dk.statsbiblioteket.newspaper</groupId>
            <artifactId>dpa-prompt-doms-ingester</artifactId>
            <!-- updated as 1.12-SNAPSHOT was incorrectly available at a time -->
            <version>1.9999-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>dk.statsbiblioteket.digital_pligtaflevering_aviser</groupId>
            <artifactId>dpa-verapdf</artifactId>
            <version>master-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>dk.statsbiblioteket.digital_pligtaflevering_aviser</groupId>
            <artifactId>dpa-statistics</artifactId>
            <version>master-SNAPSHOT</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12.4</version>
                <configuration>
                    <skipTests>${skipTests}</skipTests>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
